Process Hacker

1.3.8.0
 * NEW/IMPROVED:
   * KProcessHacker can now perform process memory reading/writing 
     by itself and does not require MmCopyVirtualMemory
   * KProcessHacker can now bypass all handle-opening protections
   * Better highlighting
   * Shows function file and line numbers where available
 * FIXED:
   * #2785648 - "cursor down crashes PH"
   * Incomplete or inaccurate thread call stacks
   * Windows 7 BSOD
   * Unexpected actions being performed when a key was pressed in 
     the memory and handle lists
   * Changed I/O tray icon tooltip from ROW to RWO
   * Corrupted usernames
   * Start times like "20 centuries ago"

1.3.7.5
 * NEW/IMPROVED:
   * #2780260 - "add <Enter> key to open Proc Properties"
   * #2780277 - "add <ENTER> to shortcut list for default action"
   * #2781625 - "System Idle Process should not have network connections"
   * #2784954 - "Ctrl+F find DLLs and not just Handles"
   * Customizable tray icons - CPU History, CPU Usage, I/O History, 
     Commit History and Physical Memory History
   * Base Priority, Start Time, and CPU Time columns
   * "Terminate Process Tree"
   * Can close TCP connections
   * Process tree loads instantly
   * Process properties (appears to) loads faster
   * Decreased CPU usage
   * Significantly less memory usage, especially when opening 
     process properties
   * Thread termination now prompts
   * Implemented Esc to close windows
   * Cycles, Page Priority and I/O Priority in process statistics
   * Integrity, I/O priority and page priority columns
   * Windows are protected from being offscreen when they load
   * Process property window locations are now saved
   * The main window dimensions are saved when exiting minimized
   * Enabled Reduce Working Set for multiple processes at a time
   * Hides Process Hacker network connections by default
 * FIXED:
   * #2782808 - "Exception generated when CPU History is set to first column."