@@ -56,7 +56,7 @@
 #define KPH_WRITEVIRTUALMEMORY KPH_CTL_CODE(12)
 #define KPH_SETPROCESSTOKEN KPH_CTL_CODE(13)
 #define KPH_GETTHREADSTARTADDRESS KPH_CTL_CODE(14)
-#define KPH_RESERVED1 KPH_CTL_CODE(15)
+#define KPH_SETHANDLEATTRIBUTES KPH_CTL_CODE(15)
 #define KPH_GETHANDLEOBJECTNAME KPH_CTL_CODE(16)
 #define KPH_OPENPROCESSJOB KPH_CTL_CODE(17)
 #define KPH_GETCONTEXTTHREAD KPH_CTL_CODE(18)
