@@ -36,6 +36,8 @@
 
 /* FUNCTION DEFS */
 
+struct _OBJECT_HANDLE_FLAG_INFORMATION;
+
 NTSTATUS NTAPI ObOpenObjectByName(
     POBJECT_ATTRIBUTES ObjectAttributes,
     POBJECT_TYPE ObjectType,
@@ -46,13 +48,25 @@ NTSTATUS NTAPI ObOpenObjectByName(
     PHANDLE Handle
     );
 
+NTSTATUS NTAPI ObSetHandleAttributes(
+    HANDLE Handle,
+    struct _OBJECT_HANDLE_FLAG_INFORMATION *HandleFlags,
+    KPROCESSOR_MODE PreviousMode
+    );
+
 /* STRUCTS */
 
-typedef struct _SET_HANDLE_GRANTED_ACCESS_DATA
+typedef struct _OBP_SET_HANDLE_GRANTED_ACCESS_DATA
 {
     HANDLE Handle;
     ACCESS_MASK GrantedAccess;
-} SET_HANDLE_GRANTED_ACCESS_DATA, *PSET_HANDLE_GRANTED_ACCESS_DATA;
+} OBP_SET_HANDLE_GRANTED_ACCESS_DATA, *POBP_SET_HANDLE_GRANTED_ACCESS_DATA;
+
+typedef struct _OBJECT_HANDLE_FLAG_INFORMATION
+{
+    BOOLEAN Inherit;
+    BOOLEAN ProtectFromClose;
+} OBJECT_HANDLE_FLAG_INFORMATION, *POBJECT_HANDLE_FLAG_INFORMATION;
 
 typedef struct _OBJECT_CREATE_INFORMATION
 {
